# jiwoong-data-study

./: create_stripplot_fixed.py  extract_jg1_data.py  filter_jg1_data.py  main.py  pyproject.toml  quality_thickness_stripplot.py  ts_stress_minus_its_stripplot.py  x52_analysis.py  x52_ys2_stress_filtered_stripplot.py  ys2_minus_iys_stripplot.py  ys2_stress_stripplot.py  ys2_stress_vs_i_ys_plot.py  중경1공장_데이터.xlsx  중경1공장_데이터_필터링완료.xlsx
.cursor/rules/: default-rule.mdc
중경2공장_새프로젝트/: README.md  analysis.py
첫시도/: test.py  test1.ipynb  중경1공장_분석_실행결과.ipynb
